--- a/src/App.scss
+++ b/src/App.scss
@@ -12,3 +12,13 @@ h2 {
   font-size: 30px;
   padding-bottom: 40px;
 }
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
