--- a/src/components/Skills/index.scss
+++ b/src/components/Skills/index.scss
@@ -1,18 +1,45 @@
 .skills {
   position: relative;
-  width: 70%;
+  width: 80%;
   background: #fff;
-  padding: 5%;
-  margin: 10% auto;
-  border-bottom: 1px solid #333;
-  &-icons {
+  margin: 5% auto;
+  div {
+    width: 80%;
     margin: 0 auto;
-    width: 70%;
-    display: flex;
-    flex-direction: row;
+  }
+  &-icons {
     justify-content: center;
     flex-wrap: wrap;
-    font-size: 5em;
-    gap: 0.5em;
+    row-gap: 2.5em;
+    column-gap: 1em;
+    color: #333;
+    div {
+      border: 3px black solid;
+      width: 80px;
+      height: 80px;
+      border-radius: 1rem;
+      p {
+        padding-top: 7px;
+        font-size: 0.8em;
+      }
+    }
+    &__item {
+      font-size: 3em;
+      padding-top: 14px;
+      &--redux {
+        font-size: 3em;
+        margin-top: 11px;
+      }
+    }
+  }
+  &-items {
+    justify-content: center;
+    flex-wrap: wrap;
+    column-gap: 1rem;
+    p {
+      border: 2px black solid;
+      border-radius: 0.3rem;
+      padding: 3px 5px;
+    }
   }
 }
