--- a/src/components/Skills/index.scss
+++ b/src/components/Skills/index.scss
@@ -1,3 +1,6 @@
+$color-purple: #8b5cf6;
+$color-pink: #ec4899;
+
 .skills {
   position: relative;
   width: 80%;
@@ -10,14 +13,22 @@
   &-icons {
     justify-content: center;
     flex-wrap: wrap;
-    row-gap: 2.5em;
-    column-gap: 1em;
+    row-gap: 3em;
+    column-gap: 2em;
     color: #333;
     div {
-      border: 3px black solid;
+      border: 3px solid #333;
       width: 80px;
       height: 80px;
       border-radius: 1rem;
+      cursor: pointer;
+      transition: all ease-in-out 0.5s;
+      &:hover {
+        transform: scale(1.3);
+        background-image: linear-gradient(45deg, $color-purple, $color-pink);
+        color: white;
+        border: transparent;
+      }
       p {
         padding-top: 7px;
         font-size: 0.8em;
@@ -35,11 +46,20 @@
   &-items {
     justify-content: center;
     flex-wrap: wrap;
-    column-gap: 1rem;
+    column-gap: 1.8rem;
     p {
-      border: 2px black solid;
+      border: 2px #333 solid;
       border-radius: 0.3rem;
       padding: 3px 5px;
+      transition: ease-in-out 0.5s;
+      color: #333;
+      cursor: pointer;
+      &:hover {
+        transform: scale(1.2);
+        background-image: linear-gradient(45deg, $color-purple, $color-pink);
+        color: #fff;
+        border: transparent;
+      }
     }
   }
 }
