--- a/src/components/Timeline/index.scss
+++ b/src/components/Timeline/index.scss
@@ -4,26 +4,22 @@ $color-pink: #ec4899;
 .timeline {
   justify-content: center;
   position: relative;
-  gap: 80px;
   padding: 50px 0;
   background: linear-gradient(45deg, $color-purple, $color-pink);
+  text-align: left;
   h2 {
     color: white;
-  }
-  &-vertical {
-    position: relative;
-    right: 42px;
+    text-align: center;
   }
   li {
     display: flex;
-    line-height: 1;
+    line-height: 1.5;
   }
 }
 
 .timeline--date {
   flex: 0 0 150px;
   color: black;
-  font-family: "Droid Serif", serif;
   font-size: 90%;
   text-align: right;
   margin-right: 50px;
@@ -38,7 +34,7 @@ $color-pink: #ec4899;
   &:before {
     content: "";
     position: absolute;
-    height: 100%;
+    height: 92%;
     width: 2px;
     background: white;
     margin: auto;
@@ -59,6 +55,10 @@ $color-pink: #ec4899;
   }
 }
 
+.timeline-title {
+  padding-bottom: 10px;
+}
+
 .timeline--description {
   margin-left: 50px;
   padding-bottom: 100px;
@@ -68,7 +68,7 @@ $color-pink: #ec4899;
 .timeline li:first-child {
   .timeline--date,
   .timeline--description {
-    margin-top: 15px;
+    margin-top: 0px;
   }
   .timeline--circle {
     &:before {
