--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;800&display=swap");
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   display: block;
   margin: 0;
