--- a/src/components/Projects/index.scss
+++ b/src/components/Projects/index.scss
@@ -4,10 +4,6 @@ $color-gray: #9ca3af;
 $color-black: #1f2937;
 $card-size: 30rem;
 
-* {
-  box-sizing: border-box;
-}
-
 .projects {
   width: 100vw;
   height: 100vh;
@@ -15,24 +11,45 @@ $card-size: 30rem;
   justify-content: center;
   overflow: hidden;
   background-image: linear-gradient(45deg, $color-purple, $color-pink);
-}
+  &-carousel {
+    position: relative;
+    width: $card-size;
+    height: $card-size;
+    perspective: 500px;
+    transform-style: preserve-3d;
+    .arrow {
+      color: white;
+      font-size: 5rem;
+      position: absolute;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      top: 50%;
+      z-index: 2;
+      cursor: pointer;
+      user-select: none;
+      background: unset;
+      border: unset;
 
-.carousel {
-  position: relative;
-  width: $card-size;
-  height: $card-size;
-  perspective: 500px;
-  transform-style: preserve-3d;
-}
+      &-left {
+        transform: translateX(-100%) translatey(-50%);
+      }
 
-.card-container {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  transform: rotateY(calc(var(--offset) * 50deg))
-    scaleY(calc(1 + var(--abs-offset) * -0.4))
-    translateZ(calc(var(--abs-offset) * -30rem))
-    translateX(calc(var(--direction) * -5rem));
-  filter: blur(calc(var(--abs-offset) * 1rem));
-  transition: all 0.3s ease-out;
+      &-right {
+        right: 0;
+        transform: translateX(100%) translatey(-50%);
+      }
+    }
+  }
+  .card-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transform: rotateY(calc(var(--offset) * 50deg))
+      scaleY(calc(1 + var(--abs-offset) * -0.4))
+      translateZ(calc(var(--abs-offset) * -30rem))
+      translateX(calc(var(--direction) * -5rem));
+    filter: blur(calc(var(--abs-offset) * 1rem));
+    transition: all 0.3s ease-out;
+  }
 }
