--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -17,6 +17,9 @@ $color-pink: #ec4899;
   &-title {
     align-items: center;
     justify-content: space-between;
+    h3 {
+      text-transform: uppercase;
+    }
     &--links {
       display: flex;
       gap: 15px;
@@ -39,6 +42,7 @@ $color-pink: #ec4899;
     flex: 1;
     img {
       width: 100%;
+      height: 230px;
     }
     &:before {
       display: block;
