adding new animations and other elements

--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -1,6 +1,4 @@
-$color-gray: #9ca3af;
-$color-black: #1f2937;
-$color-pink: #ec4899;
+@import "../../utils/variables.scss";
 
 .card {
   width: 100%;
