--- a/src/components/Banner/index.scss
+++ b/src/components/Banner/index.scss
@@ -1,24 +1,50 @@
-$mobile-large: 512px;
-$tablet: 768px;
-$laptop: 992px;
-$desktop: 1200px;
+@import "../../utils/variables.scss";
 
-$color-purple: #8b5cf6;
-$color-pink: #ec4899;
-
-.intro {
+.banner {
   position: relative;
   height: 65vh;
   text-align: center;
-  text-shadow: 1px 1px;
   color: #fff;
 
   // >512
   @media (min-width: $mobile-large) {
     height: 100vh;
   }
+  &-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -80%);
+    font-size: 200%;
+    overflow: hidden;
+    text-shadow: 0 1px 4px rgba(0, 0, 0, 0.6);
+    z-index: 1;
 
-  .image-overlay {
+    h1 {
+      margin-top: 0;
+      font-size: 1.5rem;
+
+      // >768
+      @media (min-width: $tablet) {
+        font-size: 3rem;
+      }
+    }
+  }
+  &-nav {
+    gap: 20px;
+    position: absolute;
+    left: 50%;
+    bottom: 20%;
+    transform: translateX(-50%);
+    z-index: 1;
+  }
+  &-wrapper {
+    background: #4e54c8;
+    background: linear-gradient(45deg, $color-purple, $color-pink);
+    width: 100%;
+    height: 100%;
+  }
+  &-overlay {
     display: block;
     position: absolute;
     bottom: 0;
@@ -27,14 +53,6 @@ $color-pink: #ec4899;
     width: 100%;
     height: 100%;
     top: 0;
-  }
-
-  //squares wrapper
-  .squares-wrapper {
-    background: #4e54c8;
-    background: linear-gradient(45deg, $color-purple, $color-pink);
-    width: 100%;
-    height: 100%;
   }
 
   .squares {
@@ -60,27 +78,6 @@ $color-pink: #ec4899;
   }
 }
 
-.quote {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 200%;
-  overflow: hidden;
-  text-shadow: 0 1px 4px rgba(0, 0, 0, 0.6);
-  z-index: 1;
-
-  h1 {
-    margin-top: 0;
-    font-size: 1.5rem;
-
-    // >768
-    @media (min-width: $tablet) {
-      font-size: 3rem;
-    }
-  }
-}
-
 @keyframes animate {
   0% {
     transform: translateY(0) rotate(0deg);
@@ -92,5 +89,49 @@ $color-pink: #ec4899;
     transform: translateY(-1000px) rotate(720deg);
     opacity: 0;
     border-radius: 50%;
+  }
+}
+
+.flip {
+  height: 50px;
+  overflow: hidden;
+  text-transform: uppercase;
+  & > div > div {
+    color: #fff;
+    padding: 4px 12px;
+    height: 45px;
+    margin-bottom: 50px;
+    display: inline-block;
+  }
+
+  & div:first-child {
+    animation: show 5s linear infinite;
+  }
+}
+
+@keyframes show {
+  0% {
+    margin-top: -270px;
+  }
+  5% {
+    margin-top: -180px;
+  }
+  33% {
+    margin-top: -180px;
+  }
+  38% {
+    margin-top: -90px;
+  }
+  66% {
+    margin-top: -90px;
+  }
+  71% {
+    margin-top: 0px;
+  }
+  99% {
+    margin-top: 0px;
+  }
+  100% {
+    margin-top: -270px;
   }
 }
