--- a/src/components/Projects/index.scss
+++ b/src/components/Projects/index.scss
@@ -1,8 +1,4 @@
-$color-purple: #8b5cf6;
-$color-pink: #ec4899;
-$color-gray: #9ca3af;
-$color-black: #1f2937;
-$card-size: 30rem;
+@import "../../utils/variables.scss";
 
 .projects {
   height: 100vh;
