--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;800&display=swap");
+@import "./utils/variables.scss";
 
 * {
   box-sizing: border-box;
@@ -15,6 +16,7 @@ h2 {
   font-weight: 600;
   font-size: 30px;
   padding-bottom: 40px;
+  color: $color-black;
 }
 
 .flex-row {
