--- a/src/components/Banner/index.scss
+++ b/src/components/Banner/index.scss
@@ -37,6 +37,7 @@
     bottom: 20%;
     transform: translateX(-50%);
     z-index: 1;
+    font-size: 13px;
   }
   &-wrapper {
     background: #4e54c8;
