--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -4,6 +4,8 @@
   padding: 50px 0;
   width: 100%;
   &-content {
+    display: flex;
+    flex-direction: row;
     position: relative;
     left: 50%;
     transform: translateX(-50%);
@@ -12,10 +14,21 @@
     gap: 3rem;
     padding-bottom: 60px;
     width: 60%;
+    @media (max-width: $mobile) {
+      display: block;
+      margin: 0 auto;
+      position: inherit;
+      transform: none;
+      width: 95%;
+    }
     img {
       width: 400px;
       height: 400px;
       border-radius: 1rem;
+      @media (max-width: $mobile) {
+        width: 300px;
+        height: 300px;
+      }
     }
     p {
       text-align: justify;
@@ -32,6 +45,12 @@
   perspective-origin: calc(100% - 70px);
   &:hover .button-group--icon {
     transform: rotateY(0deg);
+    @media (max-width: $mobile) {
+      margin: 0 auto;
+    }
+  }
+  @media (max-width: $mobile) {
+    margin: 20px auto 0 25%;
   }
 
   &--text {
