--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -1,3 +1,5 @@
+@import "../../utils/variables.scss";
+
 .header {
   &-logo {
     font-size: 50px;
@@ -6,5 +8,8 @@
     left: 5px;
     top: -5px;
     z-index: 1;
+    @media (max-width: $mobile) {
+      font-size: 30px;
+    }
   }
 }
