--- a/src/components/NavButton/index.scss
+++ b/src/components/NavButton/index.scss
@@ -1,3 +1,5 @@
+@import "../../utils/variables.scss";
+
 .nav-button {
   text-decoration: none;
   color: #1f2937;
@@ -9,6 +11,11 @@
   font-weight: 500;
   text-transform: uppercase;
   transition: all 0.2s ease-in-out;
+  @media (max-width: $mobile) {
+    width: 80px;
+    height: 80px;
+    padding-top: 35px;
+  }
   &:hover {
     border: none;
     font-size: 15px;
