--- a/src/components/Projects/index.scss
+++ b/src/components/Projects/index.scss
@@ -6,12 +6,19 @@
   justify-content: center;
   overflow: hidden;
   background-image: linear-gradient(45deg, $color-purple, $color-pink);
+  @media (max-width: $mobile) {
+    height: 75vh;
+  }
   &-carousel {
     position: relative;
     width: $card-size;
     height: $card-size;
     perspective: 500px;
     transform-style: preserve-3d;
+    @media (max-width: $mobile) {
+      width: 20rem;
+      height: 20rem;
+    }
     h2 {
       padding: 20px 0 15px;
       color: #fff;
@@ -29,14 +36,24 @@
       user-select: none;
       background: unset;
       border: unset;
+      @media (max-width: $mobile) {
+        font-size: 3rem;
+        top: 7%;
+      }
 
       &-left {
         transform: translateX(-100%) translatey(-50%);
+        @media (max-width: $mobile) {
+          transform: translateX(-5%) translatey(0%);
+        }
       }
 
       &-right {
         right: 0;
         transform: translateX(100%) translatey(-50%);
+        @media (max-width: $mobile) {
+          transform: translateX(5%) translatey(0%);
+        }
       }
     }
   }
