--- a/src/components/Skills/index.scss
+++ b/src/components/Skills/index.scss
@@ -5,9 +5,22 @@
   width: 80%;
   background: #fff;
   margin: 5% auto;
+  @media (max-width: $mobile) {
+    flex-direction: column;
+    width: 100%;
+    gap: 40px;
+  }
+  h2 {
+    @media (max-width: $mobile) {
+      padding-bottom: 10px;
+    }
+  }
   div {
     width: 80%;
     margin: 0 auto;
+    @media (max-width: $mobile) {
+      width: 85%;
+    }
   }
   &-icons {
     justify-content: center;
@@ -15,6 +28,10 @@
     row-gap: 3em;
     column-gap: 2em;
     color: $color-black;
+    @media (max-width: $mobile) {
+      row-gap: 1.5em;
+      column-gap: 1.2em;
+    }
     div {
       border: 3px solid $color-black;
       width: 80px;
@@ -22,6 +39,11 @@
       border-radius: 1rem;
       cursor: pointer;
       transition: all ease-in-out 0.5s;
+      @media (max-width: $mobile) {
+        width: 50px;
+        height: 50px;
+        border-radius: 0.6rem;
+      }
       &:hover {
         transform: scale(1.3);
         background-image: linear-gradient(45deg, $color-purple, $color-pink);
@@ -31,14 +53,26 @@
       p {
         padding-top: 7px;
         font-size: 0.8em;
+        @media (max-width: $mobile) {
+          padding-top: 4px;
+          font-size: 0.5em;
+        }
       }
     }
     &__item {
       font-size: 3em;
       padding-top: 14px;
+      @media (max-width: $mobile) {
+        font-size: 2em;
+        padding-top: 6px;
+      }
       &--redux {
         font-size: 3em;
         margin-top: 11px;
+        @media (max-width: $mobile) {
+          font-size: 2em;
+          margin-top: 5px;
+        }
       }
     }
   }
@@ -46,6 +80,9 @@
     justify-content: center;
     flex-wrap: wrap;
     column-gap: 1.8rem;
+    @media (max-width: $mobile) {
+      font-size: 10px;
+    }
     p {
       border: 2px $color-black solid;
       border-radius: 0.3rem;
