--- a/src/utils/variables.scss
+++ b/src/utils/variables.scss
@@ -1,7 +1,7 @@
-$mobile-large: 512px;
+$mobile: 480px;
 $tablet: 768px;
-$laptop: 992px;
-$desktop: 1200px;
+$laptop: 1024px;
+$desktop: 1440px;
 
 $color-purple: #8b5cf6;
 $color-pink: #ec4899;
