--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -2,16 +2,28 @@
 
 .contact {
   margin: 60px 0 80px;
+  @media (max-width: $mobile) {
+    margin: 40px 0 50px;
+  }
   &-form {
     margin: 0 auto;
     width: 30%;
     height: 30%;
     border: 2px $color-pink solid;
     border-radius: 1rem;
+    @media (max-width: $mobile) {
+      width: 85%;
+      height: 300px;
+    }
     form {
       margin: 40px auto;
       gap: 50px;
       width: 65%;
+      @media (max-width: $mobile) {
+        margin: 20px auto;
+        gap: 30px;
+        width: 75%;
+      }
       input {
         padding: 10px;
         border: none;
