--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -7,9 +7,17 @@
   padding: 30px 0 15px;
   font-size: 14px;
   color: white;
+  @media (max-width: $mobile) {
+    font-size: 10px;
+    padding: 12px 0 0;
+    min-height: 70px;
+  }
   a {
     color: white;
     font-size: 25px;
     margin: 15px;
+    @media (max-width: $mobile) {
+      font-size: 20px;
+    }
   }
 }
