--- a/src/components/Skills/index.scss
+++ b/src/components/Skills/index.scss
@@ -43,6 +43,7 @@
         width: 50px;
         height: 50px;
         border-radius: 0.6rem;
+        border: 2px solid $color-black;
       }
       &:hover {
         transform: scale(1.3);
@@ -54,7 +55,7 @@
         padding-top: 7px;
         font-size: 0.8em;
         @media (max-width: $mobile) {
-          padding-top: 4px;
+          padding-top: 3px;
           font-size: 0.5em;
         }
       }
@@ -64,14 +65,15 @@
       padding-top: 14px;
       @media (max-width: $mobile) {
         font-size: 2em;
-        padding-top: 6px;
+        padding-top: 8px;
       }
       &--redux {
         font-size: 3em;
         margin-top: 11px;
         @media (max-width: $mobile) {
           font-size: 2em;
-          margin-top: 5px;
+          margin-top: 6px;
+          margin-bottom: -3px;
         }
       }
     }
@@ -81,7 +83,8 @@
     flex-wrap: wrap;
     column-gap: 1.8rem;
     @media (max-width: $mobile) {
-      font-size: 10px;
+      font-size: 11px;
+      column-gap: 1.3rem;
     }
     p {
       border: 2px $color-black solid;
@@ -90,6 +93,10 @@
       transition: ease-in-out 0.5s;
       color: $color-black;
       cursor: pointer;
+      @media (max-width: $mobile) {
+        border: 1px $color-black solid;
+        padding: 2px 5px;
+      }
       &:hover {
         transform: scale(1.2);
         background-image: linear-gradient(45deg, $color-purple, $color-pink);
