--- a/src/components/Timeline/index.scss
+++ b/src/components/Timeline/index.scss
@@ -7,6 +7,9 @@
   background: linear-gradient(45deg, $color-purple, $color-pink);
   text-align: left;
   color: $color-black;
+  @media (max-width: $mobile) {
+    padding: 20px 0 0px;
+  }
   h2 {
     color: white;
     text-align: center;
@@ -15,7 +18,7 @@
     display: flex;
     line-height: 1.5;
     @media (max-width: $mobile) {
-      width: 90%;
+      width: 95%;
     }
   }
 }
@@ -27,9 +30,9 @@
   text-align: right;
   margin-right: 50px;
   @media (max-width: $mobile) {
-    flex: 0;
-    font-size: 10px;
-    margin-right: 0;
+    flex: 0 0 70px;
+    font-size: 12px;
+    margin-right: 15px;
   }
 }
 
@@ -38,7 +41,7 @@
   position: relative;
   text-align: center;
   @media (max-width: $mobile) {
-    flex: 0 0 36px;
+    flex: 0 0 40px;
   }
 
   /*For vertical line*/
@@ -52,6 +55,9 @@
     right: 0;
     left: 0;
     z-index: 2;
+    @media (max-width: $mobile) {
+      height: 95%;
+    }
   }
   i {
     transition: all 0.4s ease-in-out;
@@ -79,7 +85,7 @@
   padding-bottom: 100px;
   @media (max-width: $mobile) {
     font-size: 12px;
-    margin-left: 30px;
+    margin-left: 10px;
   }
 }
 
