--- a/src/App.scss
+++ b/src/App.scss
@@ -17,7 +17,7 @@ h2 {
   font-size: 30px;
   padding-bottom: 40px;
   color: $color-black;
-  @media (max-width: $mobile) {
+  @media (max-width: $tablet) {
     font-size: 20px;
     padding-bottom: 20px;
   }
