--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -3,7 +3,7 @@
 .about {
   padding: 50px 0;
   width: 100%;
-  @media (max-width: $mobile) {
+  @media (max-width: $tablet) {
     padding: 20px 0;
   }
   &-content {
@@ -25,11 +25,14 @@
       width: 95%;
       padding-bottom: 20px;
     }
+    @media (max-width: $tablet) {
+      gap: 2rem;
+    }
     img {
       width: 400px;
       height: 400px;
       border-radius: 1rem;
-      @media (max-width: $mobile) {
+      @media (max-width: $tablet) {
         width: 300px;
         height: 300px;
       }
@@ -41,6 +44,9 @@
         width: 83%;
         margin: 0 auto;
         padding-top: 20px;
+      }
+      @media (max-width: $tablet) {
+        line-height: 1.2rem;
       }
     }
   }
@@ -59,7 +65,9 @@
     margin: 20px auto 0 25%;
   }
   &:hover {
-    transform: translateX(-13%);
+    @media (max-width: $mobile) {
+      transform: translateX(-13%);
+    }
   }
 
   &--text {
