--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -10,7 +10,7 @@
   text-align: justify;
   transition: all 0.3s ease-out;
   @media (max-width: $mobile) {
-    padding: 0.2rem 1rem;
+    padding: 0.2rem 1rem 1rem;
   }
   p {
     margin: 0.7rem 0 0;
