--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -13,7 +13,7 @@
     border-radius: 1rem;
     @media (max-width: $mobile) {
       width: 85%;
-      height: 300px;
+      height: 85%;
     }
     form {
       margin: 40px auto;
