--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -50,6 +50,9 @@
     position: relative;
     border-radius: 3px 3px 0 0;
     flex: 1;
+    @media (max-width: $mobile) {
+      border-top: 1em solid rgba(230, 230, 230, 0.7);
+    }
     img {
       width: 100%;
       height: 230px;
@@ -68,6 +71,9 @@
       border-radius: 50%;
       background-color: #f44;
       box-shadow: 0 0 0 2px #f44, 1.5em 0 0 2px #9b3, 3em 0 0 2px #fb5;
+      @media (max-width: $mobile) {
+        display: none;
+      }
     }
   }
   &-technologies {
