--- a/src/components/Projects/index.scss
+++ b/src/components/Projects/index.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   overflow: hidden;
   background-image: linear-gradient(45deg, $color-purple, $color-pink);
-  @media (max-width: $mobile) {
+  @media (max-width: $tablet) {
     height: 70vh;
   }
   &-carousel {
@@ -22,6 +22,9 @@
     h2 {
       padding: 20px 0 15px;
       color: #fff;
+      @media (min-width: $mobile) and (max-width: $tablet) {
+        padding: 30px 0;
+      }
     }
     .arrow {
       color: white;
