--- a/src/components/Skills/index.scss
+++ b/src/components/Skills/index.scss
@@ -10,6 +10,9 @@
     width: 100%;
     gap: 40px;
   }
+  @media (min-width: $mobile) and (max-width: $tablet) {
+    width: 95%;
+  }
   h2 {
     @media (max-width: $mobile) {
       padding-bottom: 10px;
@@ -20,6 +23,9 @@
     margin: 0 auto;
     @media (max-width: $mobile) {
       width: 85%;
+    }
+    @media (min-width: $mobile) and (max-width: $tablet) {
+      width: 95%;
     }
   }
   &-icons {
